0.72 02dec19
* added support for TFATwinPlus303049.  thanks to user weezul!
* added support for acurite rain 899.  thanks to user rknobbe!

0.71 01dec19
* added support for HolmanWS5029. thanks to user rmounce!
* changed labels for pm10 from pm10_ug_m3 to pm10_0_ug_m3
* added support for rain_mm, wind_speed_mph, wind_direction, wind_gust in
   Hideki rain and wind packets.  thanks to user giuseppe saia/farmabeps,
   and user andylittle.  fixes issue #67
* change acurite 986 parse text to match parse json.  thanks to andylittle!
* added support for OSUVR128.  thanks to user sirrated!
* added support for unsupported acurite tower and 5in1 packets that include
   rssi, frequency, and snr.  thanks to user networkname!  issue #59
* added support for FOWH5 sensors.  thanks to user starvald!  issue #65

0.70 27aug19
* ported to Python 3

0.64 01may19
* added support for OS THR128. thanks to user douglassd!

0.63 23apr19
* added support for WT0124 pool sensor

0.62 08apr19
* added support for WH32B sensor.  thanks to user steepleian!

0.61 11mar19
* fix packet name for WH31E

0.60 06mar19
* deal with rtl_433 output changes to OSBHTR968 packets

0.59 03mar19
* report packet that resulted in unmapped lines.  thanks to user wjcarpenter!
* provide better feedback when rtl_433 not found
* formatting changes to keep PEP happy

0.58 15feb19
* added support for OSRGR968 and OSTHGR968 packets.  thanks to user chaoschris!
* fixed improper invocation of get_int for WH31 sensor

0.57 14feb19
* support the WH31 sensor.  thanks to user phinnay!

0.56 14feb19
* remove the light_lux multiplier.  if you can to convert to radiation, do it
  using StdWXCalculate, and beware that there is no way to properly convert
  lux to solar radiation

0.55 10feb19
* added support for fine offset WH24 sensors

0.54 22jan19
* fixed typo in acurite 5n1 parsing

0.53 20jan19
* added support for Alecto rain packets.  thanks Roberto Verrelli!

0.52 20jan19