@@ -1,6 +1,7 @@
 0.72 02dec19
 * added support for TFATwinPlus303049.  thanks to user weezul!
 * added support for acurite rain 899.  thanks to user rknobbe!
+* use METRICWX instead of METRIC for fine offset 1080/3080 packets
 
 0.71 01dec19
 * added support for HolmanWS5029. thanks to user rmounce!
